src/test/ui/wf/wf-struct-bound.stderr
error[E0277]: the trait bound `U: std::marker::Copy` is not satisfied
  --> $DIR/wf-struct-bound.rs:10:14
   |
LL | trait ExtraCopy<T:Copy> { }
   | ----------------------- required by `ExtraCopy`
...
LL |     where T: ExtraCopy<U>
   |              ^^^^^^^^^^^^- help: consider further restricting type parameter `U`: `, U: std::marker::Copy`
   |              |
   |              the trait `std::marker::Copy` is not implemented for `U`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
